homelab-v5/k8s/deployments/rpi-nginx-hello/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rpi-nginx-hello
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: nginx-hello.phantombyte.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rpi-nginx-hello
                port:
                  number: 80
